--- a/src/css/_animations.styl
+++ b/src/css/_animations.styl
@@ -24,20 +24,20 @@
 
 
 .count-enter
-  background: red
-  transition .5s
+  // background: red
+  transition 0.2s
   transform translateY(100%)
   &.count-enter-active
-    background: yellow
+    // background: yellow
     transform translateY(0)
 
 .count-exit
-  background: black
+  // background: black
   transform translateY(0)
-  transition .5s
+  transition 0.2s
   position absolute
   left 0
   bottom 0
   &.count-exit-active
-    background green
+    // background green
     transform translateY(-100%) scale(3)
